{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 188,
  "lineage": "cba70c71-dbdf-d30f-33c4-7cbb49e21b16",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "aerospike_namespace",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aerospike",
            "metadata": [
              {
                "generation": 0,
                "name": "aerospike",
                "resource_version": "2150509",
                "uid": "0bb12437-086c-4ee5-864b-d1d235106dc7"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.eks.aws_eks_access_entry.this",
            "module.eks.aws_eks_access_policy_association.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889947746832:security-group/sg-033afe064bcb37964",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-033afe064bcb37964",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d1d6b0a65d793d4"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "aerospike-on-eks-cluster-20240820113348327400000001",
            "name_prefix": "aerospike-on-eks-cluster-",
            "owner_id": "889947746832",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-cluster",
              "karpenter.sh/discovery": "aerospike-on-eks"
            },
            "tags_all": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-cluster",
              "karpenter.sh/discovery": "aerospike-on-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-053f5aad5581eaead"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889947746832:security-group/sg-06d1d6b0a65d793d4",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Node all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d1d6b0a65d793d4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033afe064bcb37964"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033afe064bcb37964"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033afe064bcb37964"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033afe064bcb37964"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033afe064bcb37964"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033afe064bcb37964"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node all ports/protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "aerospike-on-eks-node-20240820113348328900000004",
            "name_prefix": "aerospike-on-eks-node-",
            "owner_id": "889947746832",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-node",
              "karpenter.sh/discovery": "aerospike-on-eks",
              "kubernetes.io/cluster/aerospike-on-eks": "owned"
            },
            "tags_all": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-node",
              "karpenter.sh/discovery": "aerospike-on-eks",
              "kubernetes.io/cluster/aerospike-on-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-053f5aad5581eaead"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3779120878",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-033afe064bcb37964",
            "security_group_rule_id": "sgr-00b8da45ff498e171",
            "self": false,
            "source_security_group_id": "sg-06d1d6b0a65d793d4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Node all egress",
            "from_port": 0,
            "id": "sgrule-872021940",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06d1d6b0a65d793d4",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-679045065",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d1d6b0a65d793d4",
            "security_group_rule_id": "sgr-0103d6105c383942b",
            "self": false,
            "source_security_group_id": "sg-033afe064bcb37964",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3366232702",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d1d6b0a65d793d4",
            "security_group_rule_id": "sgr-063cf4e996a3cafcb",
            "self": false,
            "source_security_group_id": "sg-033afe064bcb37964",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-31901160",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d1d6b0a65d793d4",
            "security_group_rule_id": "sgr-0c6a0525241226458",
            "self": false,
            "source_security_group_id": "sg-033afe064bcb37964",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-314243529",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d1d6b0a65d793d4",
            "security_group_rule_id": "sgr-0c16fe3bfeacfc0f9",
            "self": false,
            "source_security_group_id": "sg-033afe064bcb37964",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1981532674",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d1d6b0a65d793d4",
            "security_group_rule_id": "sgr-0dc6f300799caa546",
            "self": false,
            "source_security_group_id": "sg-033afe064bcb37964",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-860396397",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d1d6b0a65d793d4",
            "security_group_rule_id": "sgr-0ee69f2cb63943508",
            "self": false,
            "source_security_group_id": "sg-033afe064bcb37964",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1149816402",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d1d6b0a65d793d4",
            "security_group_rule_id": "sgr-0cd55ccfbc7a0678f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node all ports/protocols",
            "from_port": 0,
            "id": "sgrule-4214419492",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06d1d6b0a65d793d4",
            "security_group_rule_id": "sgr-0763926b8897facb1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1481864135",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d1d6b0a65d793d4",
            "security_group_rule_id": "sgr-0e553ed71898518c8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-4228698152",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-06d1d6b0a65d793d4",
            "security_group_rule_id": "sgr-01ae54ba61b75763b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889947746832:network-acl/acl-0f77433268b77bdc1",
            "default_network_acl_id": "acl-0f77433268b77bdc1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f77433268b77bdc1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "889947746832",
            "subnet_ids": [
              "subnet-01423a4e818e71fbc",
              "subnet-034ef0aca9ed6dc07",
              "subnet-0360ba0721a4da589",
              "subnet-04da6bd033646a40f",
              "subnet-0627ccddaa53e2fb0",
              "subnet-0d90a5b847a67c5bb"
            ],
            "tags": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-default"
            },
            "tags_all": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-default"
            },
            "vpc_id": "vpc-053f5aad5581eaead"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889947746832:route-table/rtb-0e5dd4d1fe332f1ce",
            "default_route_table_id": "rtb-0e5dd4d1fe332f1ce",
            "id": "rtb-0e5dd4d1fe332f1ce",
            "owner_id": "889947746832",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-default"
            },
            "tags_all": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-053f5aad5581eaead"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889947746832:security-group/sg-0967d8bd4207fc35f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0967d8bd4207fc35f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "889947746832",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-default"
            },
            "tags_all": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-default"
            },
            "vpc_id": "vpc-053f5aad5581eaead"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cbd1756e1b9b2bec",
            "arn": "arn:aws:ec2:eu-west-1:889947746832:elastic-ip/eipalloc-0cbd1756e1b9b2bec",
            "association_id": "eipassoc-0c95960dcefbf8414",
            "domain": "vpc",
            "id": "eipalloc-0cbd1756e1b9b2bec",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0c94293c85159b837",
            "private_dns": "ip-10-1-10-237.eu-west-1.compute.internal",
            "private_ip": "10.1.10.237",
            "public_dns": "ec2-176-34-122-177.eu-west-1.compute.amazonaws.com",
            "public_ip": "176.34.122.177",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-eu-west-1a"
            },
            "tags_all": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-eu-west-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889947746832:internet-gateway/igw-0ecb43ec2227820ef",
            "id": "igw-0ecb43ec2227820ef",
            "owner_id": "889947746832",
            "tags": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks"
            },
            "tags_all": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks"
            },
            "vpc_id": "vpc-053f5aad5581eaead"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cbd1756e1b9b2bec",
            "association_id": "eipassoc-0c95960dcefbf8414",
            "connectivity_type": "public",
            "id": "nat-0f718026c5e109e48",
            "network_interface_id": "eni-0c94293c85159b837",
            "private_ip": "10.1.10.237",
            "public_ip": "176.34.122.177",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01423a4e818e71fbc",
            "tags": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-eu-west-1a"
            },
            "tags_all": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-eu-west-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-022d614b59296490b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f718026c5e109e48",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-022d614b59296490b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ecb43ec2227820ef",
            "id": "r-rtb-0d12bff8ddfd70c891080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d12bff8ddfd70c89",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889947746832:route-table/rtb-022d614b59296490b",
            "id": "rtb-022d614b59296490b",
            "owner_id": "889947746832",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f718026c5e109e48",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-private"
            },
            "tags_all": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-053f5aad5581eaead"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889947746832:route-table/rtb-0d12bff8ddfd70c89",
            "id": "rtb-0d12bff8ddfd70c89",
            "owner_id": "889947746832",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ecb43ec2227820ef",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-public"
            },
            "tags_all": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-053f5aad5581eaead"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c344768a8c574e95",
            "route_table_id": "rtb-022d614b59296490b",
            "subnet_id": "subnet-034ef0aca9ed6dc07"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081ebb0beb98908aa",
            "route_table_id": "rtb-022d614b59296490b",
            "subnet_id": "subnet-0360ba0721a4da589"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014fa6f5eb564066b",
            "route_table_id": "rtb-022d614b59296490b",
            "subnet_id": "subnet-04da6bd033646a40f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7ccdc701d82f4d1",
            "route_table_id": "rtb-0d12bff8ddfd70c89",
            "subnet_id": "subnet-01423a4e818e71fbc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7d6df7da70911c7",
            "route_table_id": "rtb-0d12bff8ddfd70c89",
            "subnet_id": "subnet-0d90a5b847a67c5bb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00968795920c1c06e",
            "route_table_id": "rtb-0d12bff8ddfd70c89",
            "subnet_id": "subnet-0627ccddaa53e2fb0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889947746832:subnet/subnet-034ef0aca9ed6dc07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034ef0aca9ed6dc07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "889947746832",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-private-eu-west-1a",
              "karpenter.sh/discovery": "aerospike-on-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-private-eu-west-1a",
              "karpenter.sh/discovery": "aerospike-on-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-053f5aad5581eaead"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889947746832:subnet/subnet-0360ba0721a4da589",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0360ba0721a4da589",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "889947746832",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-private-eu-west-1b",
              "karpenter.sh/discovery": "aerospike-on-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-private-eu-west-1b",
              "karpenter.sh/discovery": "aerospike-on-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-053f5aad5581eaead"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889947746832:subnet/subnet-04da6bd033646a40f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04da6bd033646a40f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "889947746832",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-private-eu-west-1c",
              "karpenter.sh/discovery": "aerospike-on-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-private-eu-west-1c",
              "karpenter.sh/discovery": "aerospike-on-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-053f5aad5581eaead"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889947746832:subnet/subnet-01423a4e818e71fbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01423a4e818e71fbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "889947746832",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-public-eu-west-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-public-eu-west-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-053f5aad5581eaead"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889947746832:subnet/subnet-0d90a5b847a67c5bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d90a5b847a67c5bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "889947746832",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-public-eu-west-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-public-eu-west-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-053f5aad5581eaead"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889947746832:subnet/subnet-0627ccddaa53e2fb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0627ccddaa53e2fb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "889947746832",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-public-eu-west-1c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks-public-eu-west-1c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-053f5aad5581eaead"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889947746832:vpc/vpc-053f5aad5581eaead",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0f77433268b77bdc1",
            "default_route_table_id": "rtb-0e5dd4d1fe332f1ce",
            "default_security_group_id": "sg-0967d8bd4207fc35f",
            "dhcp_options_id": "dopt-038b51cea99800409",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-053f5aad5581eaead",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e5dd4d1fe332f1ce",
            "owner_id": "889947746832",
            "tags": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks"
            },
            "tags_all": {
              "Blueprint": "aerospike-on-eks",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "aerospike-on-eks"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}